# nai

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
data/deepseek-ai_DeepSeek-V3/: articles1.csv
data/google_gemini-2.0-flash-lite-001/: articles1.csv
nai/embeddings/: embedding_feature.py
nai/generate/: anthropic_provider.py  base_provider.py  main.py  openai_provider.py  openrouter_provider.py  providers.py  together_provider.py
nai/train/: cost.py  feature.py  frequency.py  model.py
specs/001-model-training/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-model-training/checklists/: requirements.md
specs/001-model-training/contracts/: cli-contract.md
